2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c:
	  - Add comments and rearrange structure members.

2013-02-26  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_header_function),
	(fludownloader_new_task):
	  - Parse HTTP headers to find out file sizes (still unused).

2013-02-25  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (done_cb):
	* lib/fludownloader.c: (_write_function), (_process_curl_messages):
	* lib/fludownloader.h:
	  - Report downloaded size upon task completion. This seems the only way to
	    detect errors when dealing with the FILE protocol.
	  - Update example.

2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	* lib/fludownloader.c: (_write_function):
	* lib/fludownloader.h:
	  - Allow tasks to be aborted from the callback. Update example.

2013-02-20  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_write_function), (_is_task_running),
	(_remove_task), (_abort_task), (_process_curl_messages),
	(_thread_function), (fludownloader_destroy),
	(fludownloader_new_task), (fludownloader_abort_task),
	(fludownloader_abort_all_tasks):
	* lib/fludownloader.h:
	  - Allow the current downloading task to be aborted immediately.
	    This makes libCurl start a new TCP stream, but it is still faster than
	    waiting for the current task to complete, if it is a big file.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_init),
	(fludownloader_shutdown):
	  - Add global init/cleanup of libCurl. Init was done automatically before,
	    but it is nicer to call it explicitly.

2013-02-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (_process_curl_messages),
	(fludownloader_new_task), (fludownloader_abort_task),
	(fludownloader_abort_all_tasks),
	(fludownloader_abort_all_pending_tasks):
	* lib/fludownloader.h: