@@ -2,12 +2,13 @@
 #include <glib/gprintf.h>
 #include <unistd.h>
 #include <stdio.h>
+#include <stdlib.h>
 #include "fludownloader.h"
 
 gboolean
 data_cb (void *buffer, size_t size, gpointer user_data)
 {
-//  g_printf ("Data from #%d:\n", (int) user_data);
+  g_printf ("Received %d bytes from #%d\n", size, (int) user_data);
 //  g_printf ("%*s\n", MIN (size, 60), (char *) buffer);
   return TRUE;
 }
@@ -31,15 +32,34 @@ main (int argc, char *argv[])
     return -1;
   }
 
+#if 0
+  /* Manual list of tests */
   fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/_index.html", NULL, (gpointer) 1);
-  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/Sintel_Trailer1.480p.DivX_Plus_HD.mkv", "1000-2000", (gpointer) 2);
+  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/Sintel_Trailer1.480p.DivX_Plus_HD.mkv", NULL, (gpointer) 2);
   fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/sintel_trailer-480p.mp4", NULL, (gpointer) 3);
   fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/sintel_trailer-720p.mp4", NULL, (gpointer) 4);
-  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/Sintel_Trailer.480p.DivX_Plus_HD.mkv", "100-200", (gpointer) 5);
+  fludownloader_new_task (dl, "http://ftp.nluug.nl/ftp/graphics/blender/apricot/trailer/Sintel_Trailer.480p.DivX_Plus_HD.mkv", NULL, (gpointer) 5);
+  fludownloader_new_task (dl, "file:///home/fluendo/psvn/libfludownloader/configure", NULL, (gpointer)1000);
+#endif
 
-  g_printf ("Press ENTER to abort all tasks\n");
-  getchar ();
-  fludownloader_abort_all_tasks (dl, TRUE);
+#if 1
+  /* Test large numbers of enqueued tasks */
+  {
+    int i;
+    for (i=1; i<=atoi (argv[1]); i++) {
+      char *url;
+      url = g_strdup_printf ("http://dash.fluendo.fluendo.lan:8080/ElephantsDream/MPDs/../ed_4s/ed_4sec_500kbit/ed_4sec%d.m4s", i);
+      fludownloader_new_task (dl, url, NULL, (gpointer)i);
+      g_free (url);
+    }
+  }
+#endif
+
+#if 0
+  /* Test redirections */
+  fludownloader_new_task (dl, "http://www.google.com", NULL, (gpointer) 1);
+#endif
+
   g_printf ("Press ENTER to end\n");
   getchar ();
 
